texlive-bin (2023.20230311.66589-1) UNRELEASED; urgency=medium

  * New upstream snapshot made for TL 2023.
    - Remove sources of dvisvgm from orig.tar.xz, we don't build
      it anyways.
    - Refresh / Disable patches.
  * Fix BD:
    - Add libpotrace-dev
    - Replace libfontconfig1-dev by libfontconfig-dev
  * Fix / Add Lintian Overrides.

 -- Hilmar Preusse <hille42@web.de>  Wed, 22 Mar 2023 11:28:12 +0100

texlive-bin (2022.20220321.62855-5) unstable; urgency=medium

  [ Hilmar Preusse ]
  * Add bug script and bug control file for texlive-binaries.
  * Add Dep on sse2-support, to make sure luatex works
    correctly (Closes: #1023007).

  [ Debian Janitor ]
  * Remove constraints unnecessary since buster (oldstable):
    + Build-Depends-Arch: Drop versioned constraint on automake, libpixman-1-dev
      and libzzip-dev.
    + texlive-binaries: Drop versioned constraint on texlive-lang-japanese and
      texlive-metapost in Replaces.
    + texlive-binaries: Drop versioned constraint on texlive-htmlxml in Breaks.
    + libkpathsea6: Drop versioned constraint on texlive-binaries in Breaks.
    + libptexenc1: Drop versioned constraint on texlive-binaries in Breaks.

 -- Hilmar Preusse <hille42@web.de>  Sun, 11 Dec 2022 09:33:59 +0100

texlive-bin (2022.20220321.62855-4) unstable; urgency=medium

  * Separate "indep" and "arch" in d/rules better (Closes: #1012018).

 -- Hilmar Preusse <hille42@web.de>  Sat, 04 Jun 2022 23:44:11 +0200

texlive-bin (2022.20220321.62855-3) unstable; urgency=low

  * Upload to unstable.

 -- Hilmar Preusse <hille42@web.de>  Wed, 01 Jun 2022 09:04:23 +0200

texlive-bin (2022.20220321.62855-2) experimental; urgency=medium

  * Upgrade xpdf code to 4.04 to solve CVE-2021-27548
    (Closes: #1011333).
  * Lintian:
    - Remove obsolete: source-is-missing
    - Add (in general): very-long-line-length-in-source-file
    - Fix spelling errors in manual pages.
    - W: libtexlua53: package-name-doesnt-match-sonames libtexlua53-5