@@ -1,0 +1,2 @@
+usr/bin/*jit*
+usr/share/man/man*/*jit*
