@@ -1,0 +1,15 @@
+#!/bin/sh
+# texlive-binaries postinst, created 2008 by Frank Küster
+# probably not copyrightable as it looks now, but anyway the code maybe 
+# freely copied, distributed and/or modified
+
+set -e
+
+case "$1" in
+  configure|reconfigure)
+    dpkg-trigger texmf-format
+    ;;
+esac
+
+#DEBHELPER#
+
